--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -13,9 +13,9 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: '16'
-      - name: navigate to the root dir
-        run: cd full-stack-open-pokedex/
       - name: npm install
         run: npm install
+        working-directory: full-stack-open-pokedex/
       - name: lint
         run: npm run eslint
+        working-directory: full-stack-open-pokedex/
