--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -25,3 +25,10 @@ jobs:
       - name: test
         run: npm run test
         working-directory: full-stack-open-pokedex/
+      - name: e2e tests
+        uses: cypress-io/github-action@v5
+        with:
+          command: npm run test:e2e
+          start: npm run start-prod
+          wait-on: http://localhost:5000
+          working-directory: full-stack-open-pokedex/
