--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -36,4 +36,5 @@ jobs:
           wait-on: http://localhost:5000
           working-directory: full-stack-open-pokedex/
       - name: Deploy to Render
+        if: ${{ github.event_name == 'push' }}
         run: curl https://api.render.com/deploy/srv-${{ secrets.RENDER_SERVICE_ID }}?key=${{ secrets.RENDER_API_KEY }}
