change woking dir for bump

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -43,8 +43,10 @@ jobs:
     needs: [simple_deployment_pipeline]
     runs-on: ubuntu-20.04
     steps:
+      - uses: anothrNick/github-tag-action@1.64.0
       - name: Bump version and push tag
-        uses: anothrNick/github-tag-action@1.64.0
+        working-directory: full-stack-open-pokedex/
+        run: cd 
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           DEFAULT_BUMP: patch
