--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -45,7 +45,7 @@ jobs:
     steps:
       - uses: anothrNick/github-tag-action@1.64.0
       - name: Bump version and push tag
-        working-directory: full-stack-open-pokedex/
+        working-directory: /
         run: cd 
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
