--- a/.github/workflows/teststuff.yml
+++ b/.github/workflows/teststuff.yml
@@ -23,6 +23,5 @@ jobs:
           COMMIT_MESSAGES: ${{ toJson(github.event.commits.*.message) }}
         run: echo "$COMMIT_MESSAGES"
       - name: Test skip functionality
-        if: ${{ github.event_name == 'push' && contains(github.event.commits.*.message, '#skip') }}
+        if: ${{ github.event_name == 'push' && github.event.commits.*.message != '#skip' }}
         run: echo "Hi it was successful"
-        
