--- a/.github/workflows/testnotify.yml
+++ b/.github/workflows/testnotify.yml
@@ -16,8 +16,8 @@ jobs:
         if: success()
         with:
             severity: info
-            title: this is the title
-            details: commit url ${{ github.event.commits.*.url }}
+            description: this is the title
+            details: commit ${{ github.event.head_commit.url }} by ${{ github.event.head_commit.author.username }}
             webhookUrl: ${{ secrets.DISCORD_WEBHOOK }}
       - name: Test Failure
         uses: rjstone/discord-webhook-notify@v1
