--- a/.github/workflows/testnotify.yml
+++ b/.github/workflows/testnotify.yml
@@ -16,9 +16,9 @@ jobs:
         if: success()
         with:
             severity: info
-            description: this is the title
-            text: this is the text
-            details: commit ${{ github.event.head_commit.url }} by ${{ github.event.head_commit.author.username }}
+            text: Build Failed
+            # description: 
+            details: commit ${{ github.event.head_commit.url }} by ${{ github.event.head_commit.author.username }} failed to build :(
             webhookUrl: ${{ secrets.DISCORD_WEBHOOK }}
       - name: Test Failure
         uses: rjstone/discord-webhook-notify@v1
