--- a/.github/workflows/testnotify.yml
+++ b/.github/workflows/testnotify.yml
@@ -17,7 +17,7 @@ jobs:
         with:
             severity: info
             text: Build Failed
-            # description: 
+            description: 
             details: commit ${{ github.event.head_commit.url }} by ${{ github.event.head_commit.author.username }} failed to build :(
             webhookUrl: ${{ secrets.DISCORD_WEBHOOK }}
       - name: Test Failure
