--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -30,7 +30,9 @@ jobs:
         if: ${{ failure() }}
         with:
             severity: error
-            details: Build Failed!
+            text: Build Failed
+            # details: Build Failed!
+            description: commit ${{ github.event.head_commit.url }} by ${{ github.event.head_commit.author.username }} failed to build :(
             webhookUrl: ${{ secrets.DISCORD_WEBHOOK }}
       - name: test
         run: npm run test
@@ -50,7 +52,9 @@ jobs:
         if: ${{ success() }}
         with:
             severity: info
-            details: Deployment Succeeded!
+            text: A new version of Pokedex deployed
+            # details: Deployment Succeeded!
+            description: to https://pokedex-78yv.onrender.com by ${{ github.event.head_commit.author.username }}
             webhookUrl: ${{ secrets.DISCORD_WEBHOOK }}
 
   tag_release:
